k8s/base/servers/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loom-gateway
    component: loom-gateway
  name: loom-gateway
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: loom-gateway
  type: ClusterIP
